Text sizing issues on mobile

--- a/resources/css/style2.css
+++ b/resources/css/style2.css
@@ -13,6 +13,7 @@ header {
     width: 100vw;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     height: 15vh;
 }
